tests/rune_literal_invalid_codepoint_bad.stderr
tests/rune_literal_invalid_codepoint_bad.hop:2:12: error: HOP1017: invalid Unicode code point in rune literal
