tests/rune_literal_invalid_codepoint_bad.hop
// Verifies rune literal invalid codepoint is rejected.
const x = '\uD800'
